overflow:auto to put scrollbars on wikis when needed - fixes #3958

--- a/app/stylesheets/ui/wiki.scss
+++ b/app/stylesheets/ui/wiki.scss
@@ -1,5 +1,7 @@
 .wiki, .post {
 
+  overflow: auto;
+
 
   //
   // CODE BLOCKS
